--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,24 @@ body {
     margin-top: 32px;
 }
 
+.table-wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 824px;
+    padding-right: 10px;
+    padding-left: 20px;
+    margin-top: 32px;
+}
+
+.team-wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 500px;
+    padding-right: 20px;
+    padding-left: 10px;
+    margin-top: 32px;
+}
+
 .card {
     margin-bottom: 24px;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
@@ -73,4 +91,9 @@ body {
     margin-bottom: 6px;
     font-weight: bold;
     color: #079A82;
+}
+
+.row {
+    margin-left:-5px;
+    margin-right:-5px;
 }
