--- a/assets/style.css
+++ b/assets/style.css
@@ -48,11 +48,11 @@ body {
 }
 
 .table-wrapper {
-    margin-right: auto;
-    margin-left: auto;
+    margin-right: 15px;
+    margin-left: 10px;
     max-width: 824px;
-    padding-right: 10px;
-    padding-left: 20px;
+    padding-right: 5px;
+    padding-left: 10px;
     margin-top: 32px;
 }
 
@@ -60,8 +60,8 @@ body {
     margin-right: auto;
     margin-left: auto;
     max-width: 500px;
-    padding-right: 20px;
-    padding-left: 10px;
+    padding-right: 10px;
+    padding-left: 15px;
     margin-top: 32px;
 }
 
