--- a/assets/style.css
+++ b/assets/style.css
@@ -49,19 +49,19 @@ body {
 
 .table-wrapper {
     margin-right: 15px;
-    margin-left: 10px;
-    max-width: 824px;
+    margin-left: 20px;
+    max-width: auto;
     padding-right: 5px;
     padding-left: 10px;
     margin-top: 32px;
 }
 
 .team-wrapper {
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 500px;
-    padding-right: 10px;
-    padding-left: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
+    max-width: auto;
+    padding-right: 5px;
+    padding-left: 10px;
     margin-top: 32px;
 }
 
