--- a/assets/style.css
+++ b/assets/style.css
@@ -48,19 +48,19 @@ body {
 }
 
 .table-wrapper {
-    margin-right: 5px;
-    margin-left: 20px;
-    max-width: auto;
-    padding-right: 5px;
+    margin-right: 15px;
+    margin-left: 15px;
+    width: 55%;
+    padding-right: 10px;
     padding-left: 5px;
     margin-top: 32px;
 }
 
 .team-wrapper {
-    margin-right: 15px;
-    margin-left: 5px;
-    max-width: auto;
-    padding-right: 5px;
+    margin-right: 10px;
+    margin-left: 10px;
+    max-width: 45%;
+    padding-right: 10px;
     padding-left: 5px;
     margin-top: 32px;
 }
