--- a/assets/style.css
+++ b/assets/style.css
@@ -48,17 +48,17 @@ body {
 }
 
 .table-wrapper {
-    margin-right: 15px;
-    margin-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
     width: 55%;
-    padding-right: 20px;
+    padding-right: 5px;
     padding-left: 5px;
     margin-top: 32px;
 }
 
 .team-wrapper {
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: auto;
+    margin-left: auto;
     max-width: 45%;
     padding-right: 5px;
     padding-left: 5px;
